# DCLP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  base-save.dclp  build-freetype.sh  clean.sh  cmake_install.cmake  curl-license.txt  re-build.sh  run.sh  setup.sh
cards/: Fief.dclp
examples/: all.dclp  bane.dclp  bonfire.dclp  coin.dclp  curse.dclp  cursed.dclp  dominate.dclp  e.txt  harem.dclp  pooka.dclp  tax.dclp  werewolf.dclp  workshop.dclp
expansions/Test/: 1804289383.dclp  846930886.dclp  master.mdclp
glfw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
glfw/docs/: Doxyfile  Makefile  cmake_install.cmake
glfw/docs/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  files.html  (+47 more)
glfw/examples/: Makefile  cmake_install.cmake
glfw/src/: Makefile  cmake_install.cmake
glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
lib/pkgconfig/: libclipboard.pc
src/: Expansion-explorer.cpp  Expansion-explorer.h  Image.cpp  Image.h  ImguiManager.cpp  ImguiManager.h  Log.cpp  OSspecifics.cpp  OSspecifics.h  Resources.cpp  Resources.h  Saves-class.cpp  Saves-class.h  Saves.cpp  Saves.h  States.cpp  States.h  Text.cpp  Text.h  artworks.h  handler.cpp  handler.h  main.cpp  main.h  utils.cpp  utils.h
(+1 files in other folders)
